Oprava tabulek Přidání struktury testů  a určité vyplněné testové soubory pro interpret

--- a/resources/documents/Pascal0Like Symboly a klicova slova.tex
+++ b/resources/documents/Pascal0Like Symboly a klicova slova.tex
@@ -24,8 +24,9 @@ czech
 
 \begin{table}[]
 \centering
-\caption{Instrukce}
-\label{instrukce}
+\caption{Symboly a klíčová slova}
+\label{symboly}
+\end{table}
 \begin{longtable}{|c|l|p{10cm}|}
 \hline
 		Kód & Instrukce & Popis \\
@@ -50,5 +51,4 @@ czech
 \rule{0pt}{3ex}4 & \texttt{LRT 0, M} & Vloží konstantní reálnou hodnotu (\texttt{literál}) \texttt{M} do zásobníku \\ \hline
 \rule{0pt}{3ex}5 & \texttt{OPR 0, 0} & \textbf{Operace}, která se provede nad vrcholem zásobníku pro celé čísla \\ \hline
 \end{longtable}
-\end{table}
 \end{document}
