--- a/resources/documents/Pascal0Like Symboly a klicova slova.tex
+++ b/resources/documents/Pascal0Like Symboly a klicova slova.tex
@@ -22,33 +22,50 @@ czech
 
 \begin{document}
 
-\begin{table}[]
+\begin{table}
 \centering
-\caption{Symboly a klíčová slova}
-\label{symboly}
+\caption{Symboly}
+\label{Symboly}
 \end{table}
-\begin{longtable}{|c|l|p{10cm}|}
+\begin{longtable}{|c|c|p{10cm}|}
 \hline
-		Kód & Instrukce & Popis \\
-\hline\hline
-\rule{0pt}{3ex}1 & \texttt{LIT 0, M} & Vloží konstantní celou hodnotu (\texttt{literál}) \texttt{M} do zásobníku \\ \hline
-\rule{0pt}{3ex}2 & \texttt{LRT 0, M} & Vloží konstantní reálnou hodnotu (\texttt{literál}) \texttt{M} do zásobníku \\ \hline
-\rule{0pt}{3ex}3 & \texttt{OPR 0, M} & \textbf{Operace}, která se provede nad vrcholem zásobníku pro celé čísla \\ \hline
-\rule{0pt}{3ex} & \texttt{OPR 0, 0} & \textbf{Return}; vrácení se z procedury k volajícímu \\ \hline
-\rule{0pt}{3ex} & \texttt{OPR 0, 1} & \textbf{Negace}; vybere vrchol a vrátí negativní hodnotu \\ \hline
-\rule{0pt}{3ex} & \texttt{OPR 0, 2} & \textbf{Sčítání}; vybere dvě hodnoty, sečte a vrátí \\ \hline
-\rule{0pt}{3ex} & \texttt{OPR 0, 3} & \textbf{Odečítání}; vybere dvě hodnoty, odečte druhou první a vrátí výsledek \\ \hline
-\rule{0pt}{3ex} & \texttt{OPR 0, 4} & \textbf{Násobení}; vybere dvě hodnoty, vynásobí a vrátí výsledek \\ \hline
-\rule{0pt}{3ex} & \texttt{OPR 0, 5} & \textbf{Dělení}; vybere dvě hodnoty, vydělí druhou první \\ \hline
-\rule{0pt}{3ex} & \texttt{OPR 0, 6} & \textbf{Lichost}; vybere vrchol a vloží 1 když liché, 0 když sudé \\ \hline
-\rule{0pt}{3ex} & \texttt{OPR 0, 7} & \textbf{Modulo}; vybere dvě hodnoty, vydělí druhý prvním a vloží zbytek \\ \hline
-\rule{0pt}{3ex} & \texttt{OPR 0, 8} & \textbf{Rovnost}; vybere dvě hodnoty, a vloží 1 pokud se rovnají, jinak 0 \\ \hline
-\rule{0pt}{3ex} & \texttt{OPR 0, 9} & \textbf{Nerovnost}; vybere dvě hodnoty a vloží 0 pokud se rovnají, jinak 0 \\ \hline
-\rule{0pt}{3ex} & \texttt{OPR 0, 10} & \textbf{Menší než}; vybere dvě hodnoty a vloží 1 pokud je první menší než druhá, jinak 0 \\ \hline
-\rule{0pt}{3ex} & \texttt{OPR 0, 11} & \textbf{Větší nebo rovno než}; vybere dvě hodnoty a vloží 1 pokud je první větší nebo rovno než druhá, jinak 0 \\ \hline
-\rule{0pt}{3ex} & \texttt{OPR 0, 12} & \textbf{Větší}; vybere dvě hodnoty a vloží 1 pokud je první větší nebo rovno než druhá, jinak 0 \\ \hline
-\rule{0pt}{3ex} & \texttt{OPR 0, 13} & \textbf{Menší nebo rovno než}; vybere dvě hodnoty a vloží 1 pokud je první menší nebo rovno než druhá, jinak 0 \\ \hline
-\rule{0pt}{3ex}4 & \texttt{LRT 0, M} & Vloží konstantní reálnou hodnotu (\texttt{literál}) \texttt{M} do zásobníku \\ \hline
-\rule{0pt}{3ex}5 & \texttt{OPR 0, 0} & \textbf{Operace}, která se provede nad vrcholem zásobníku pro celé čísla \\ \hline
+		\textbf{Symbol} & \textbf{Název} & \textbf{Popis} \\
+\hline
++ & \texttt{PLUS} & sčítání ve výrazech \\ \hline
+- & \texttt{MINUS} & odečítání ve výrazech \\ \hline
+* & \texttt{MULTIPLY} & násobení ve výrazech \\ \hline
+/ & \texttt{DIVIDE} & dělení ve výrazech \\ \hline
+\% & \texttt{MODULO} & modulo ve výrazech \\ \hline
+= & \texttt{EQUAL} &  kontrola rovnosti dvou výrazů \\ \hline
+<> & \texttt{NOT\_EQUAL} & kontrola nerovnosti dvou výrazů \\ \hline
+< & \texttt{LT} & kontrola, že levý výraz je menší než pravý výraz \\ \hline
+<= & \texttt{LE} & kontrola, že levý výraz je menší nebo stejně velký jako pravý výraz \\ \hline
+>= & \texttt{GE} & kontrola, že levý výraz je větší nebo stejně velký jako pravý výraz \\ \hline
+> & \texttt{GT} & kontrola, že levý výraz je větší než pravý výraz \\ \hline
+:= & \texttt{ASSIGN} & přiřazení proměnné \\ \hline
+? & \texttt{TERNARY\_ONE} & ternární operátor 1 \\ \hline
+! & \texttt{TERNARY\_TWO} & ternární operátor 2 \\ \hline
+; & \texttt{SEMI} & konec příkazu \\ \hline
+, & \texttt{COMMA} & oddělovač proměnných \\ \hline
+: & \texttt{COLON} & inicializace návěští \\ \hline
+( & \texttt{LPAREN} & levá závorka výrazu \\ \hline
+) & \texttt{RPAREN} & pravá závorka výrazu \\ \hline
+[ & \texttt{LBRACK} & počátek výrazů paralelní deklarace \\ \hline
+] & \texttt{RBRACK} & konec výrazů paralelní deklarace \\ \hline
+. & \texttt{DOT} & konec programu \\ \hline
+\end{longtable}
+
+
+\begin{table}
+\centering
+\caption{Klíčová slova}
+\label{Slova}
+\end{table}
+\begin{longtable}{|c|c|p{10cm}|}
+\hline
+		\textbf{Název} &\textbf{Použití} \\
+\hline
+\texttt{BEGIN} & počátek bloku příkazů \\ \hline
+\texttt{END} & konec bloku příkazů \\ \hline
 \end{longtable}
 \end{document}
