--- a/resources/documents/Pascal0Like Chybove kody.tex
+++ b/resources/documents/Pascal0Like Chybove kody.tex
@@ -23,12 +23,11 @@ czech
 
 \begin{document}
 
-\begin{table}[]
-\centering
+\begin{longtable}{|c|c|p{8cm}|}
 \caption{Chybové kódy}
 \label{chyby}
-\end{table}
-\begin{longtable}{|c|c|p{8cm}|}
+\endfirsthead
+\endhead
 \hline
 		\textbf{Kód} & \textbf{Chyba} & \textbf{Komentář} \\
 \hline\hline
