--- a/resources/documents/Pascal0Like Symboly a klicova slova.tex
+++ b/resources/documents/Pascal0Like Symboly a klicova slova.tex
@@ -22,12 +22,12 @@ czech
 
 \begin{document}
 
-\begin{table}
+\begin{longtable}{|c|c|p{10cm}|}
 \centering
 \caption{Symboly}
-\label{Symboly}
-\end{table}
-\begin{longtable}{|c|c|p{10cm}|}
+\label{symboly}
+\endfirsthead
+\endhead
 \hline
 		\textbf{Symbol} & \textbf{Název} & \textbf{Popis} \\
 \hline
@@ -56,12 +56,11 @@ czech
 \end{longtable}
 
 
-\begin{table}
-\centering
-\caption{Klíčová slova}
-\label{Slova}
-\end{table}
 \begin{longtable}{|c|c|p{10cm}|}
+\caption{Klíčová slova}
+\label{slova}
+\endfirsthead
+\endhead
 \hline
 		\textbf{Název} &\textbf{Použití} \\
 \hline
