--- a/resources/documents/Pascal0Like Symboly a klicova slova.tex
+++ b/resources/documents/Pascal0Like Symboly a klicova slova.tex
@@ -23,7 +23,6 @@ czech
 \begin{document}
 
 \begin{longtable}{|c|c|p{10cm}|}
-\centering
 \caption{Symboly}
 \label{symboly}
 \endfirsthead
@@ -66,5 +65,38 @@ czech
 \hline
 \texttt{BEGIN} & počátek bloku příkazů \\ \hline
 \texttt{END} & konec bloku příkazů \\ \hline
+\texttt{ODD} & kontrola, zda je výraz lichý \\ \hline
+\texttt{AND} & logické AND ve výrazech \\ \hline
+\texttt{OR} & logické OR ve výrazech \\ \hline
+\texttt{NOT} & logická negace ve výrazech \\ \hline
+\texttt{TRUE} & logická 1 \\ \hline
+\texttt{FALSE} & logická 0 \\ \hline
+\texttt{CONST} & deklarace konstanty \\ \hline
+\texttt{INTEGER} & deklarace číselného datového typu \\ \hline
+\texttt{REAL} & deklarace číselného datového typu s plovoucí čárkou \\ \hline
+\texttt{BOOLEAN} & deklarace logického datového typu \\ \hline
+\texttt{VAR} & deklarace číselného typu v \textit{legacy} módu \\ \hline
+\texttt{LABEL} & deklarace návěští \\ \hline
+\texttt{PROCEDURE} & deklarace procedury \\ \hline
+\texttt{PROGRAM} & deklarace programu \\ \hline
+\texttt{USE} & příkaz pro použití módu \\ \hline
+\texttt{LEGACY} & \textit{legacy} mód \\ \hline
+\texttt{DEFAULT} & \textit{default} mód \\ \hline
+\texttt{STRICT} & \textit{strict} mód \\ \hline
+\texttt{GOTO} & příkaz skoku na návěští \\ \hline
+\texttt{IF} & součást \textit{if-then} větve \\ \hline
+\texttt{THEN} & součást \textit{if-then} a \textit{else-then} větve \\ \hline
+\texttt{ELSE} & součást \textit{else-then} větve \\ \hline
+\texttt{REPAT} & začátek \textit{repeat-until} cyklu \\ \hline
+\texttt{UNTIL} & konec \textit{repeat-until} cyklu \\ \hline
+\texttt{WHILE} & začátek \textit{while-do} cyklu a konec \textit{do-while} cyklu \\ \hline
+\texttt{DO} & začátek \textit{do-while} cyklu a konec \textit{while-do} cyklu, součástí \textit{for} cyklu \\ \hline
+\texttt{READ} & příkaz I/O vstupu \\ \hline
+\texttt{WRITE} & příkaz I/O výstupu \\ \hline
+\texttt{FOR} & začátek \textit{for} cyklu \\ \hline
+\texttt{TO} & indikace pro \textit{for} cyklus přičítat k iterační proměnné \\ \hline
+\texttt{DOWNTO} & indikace pro \textit{for} cyklus odečítat od iterační proměnné \\ \hline
+\texttt{CASE} & začátek větvícího příkazu \textit{case-of} \\ \hline
+\texttt{OF} & součást větvícího příkazu \textit{case-of} \\ \hline
 \end{longtable}
 \end{document}
