--- a/resources/documents/Pascal0Like Symboly a klicova slova.tex
+++ b/resources/documents/Pascal0Like Symboly a klicova slova.tex
@@ -86,7 +86,7 @@ czech
 \texttt{GOTO} & příkaz skoku na návěští \\ \hline
 \texttt{IF} & součást \textit{if-then} větve \\ \hline
 \texttt{THEN} & součást \textit{if-then} a \textit{else-then} větve \\ \hline
-\texttt{ELSE} & součást \textit{else-then} větve \\ \hline
+\texttt{ELSE} & součást \textit{else-then} větve a \textit{case} větve \\ \hline
 \texttt{REPAT} & začátek \textit{repeat-until} cyklu \\ \hline
 \texttt{UNTIL} & konec \textit{repeat-until} cyklu \\ \hline
 \texttt{WHILE} & začátek \textit{while-do} cyklu a konec \textit{do-while} cyklu \\ \hline
